fix teaching experience issue

--- a/index.html
+++ b/index.html
@@ -1433,6 +1433,10 @@ for (var i = 0; i < btns.length; i++) {
         <br>
         </tbody></table>
 
+
+
+
+
         <p id="Teaching"><br></p>
         <!--
 TEACHING EXPERIENCE -->
@@ -1448,18 +1452,20 @@ TEACHING EXPERIENCE -->
 
         </tbody></table>
 
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-40px;margin-right:auto;margin-left:auto;"><tbody>
 
 
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-10px;margin-left:auto;"><tbody>
-
-          <tr>
+        <tr>
             <td style="padding:20px;vertical-align:middle">
-                <div class="teaching_exp">
-              <img src="images/ECE_closed_full_colour-high-res_0.png" style="border-radius:5%"></div></td>
+                <div class="teaching_1">
+                <img src="images/ECE_closed_full_colour-high-res_0.png" width="160" style="border-radius:5%;position:relative;">
+                </div>
+            </td>
             <td style="padding:20px;vertical-align:middle">
               <div class="paper_title">
               <div class="paper_title_center">
+
               <a href="https://ece.ubc.ca/" target="_blank"><papertitle>Department of Electrical and Computer Engineering, University
               of British Columbia </papertitle></a>
               <br><br>
@@ -1480,11 +1486,15 @@ TEACHING EXPERIENCE -->
               </div></div>
             </td>
           </tr>
-          <tr>
+        <br>
+
+
+
+        <tr>
             <td style="padding:20px;vertical-align:middle">
-              <div class="teaching_exp">
-              <img src="images/SBME_UBC_Horizontal_Primary_Colour_RGB.png" style="border-radius:5%">
-            </div>
+                <div class=teaching_2>
+                <img src="images/SBME_UBC_Horizontal_Primary_Colour_RGB.png" width="160" style="border-radius:5%;position:relative;">
+                </div>
             </td>
             <td style="padding:20px;vertical-align:middle">
               <div class="paper_title">
@@ -1496,7 +1506,9 @@ TEACHING EXPERIENCE -->
               </div></div>
             </td>
           </tr>
+        <br>
         </tbody></table>
+
 
 
 
