--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ function scrollFunction() {
 
 
   if (document.body.scrollTop > research_location || document.documentElement.scrollTop > research_location) {
-    document.getElementById("navbar").style.padding = "18px 0px";
+    document.getElementById("navbar").style.padding = "16px 0px";
     //document.getElementById("logo").style.fontSize = "25px";
 
     btns[0].className = "navbar";
@@ -105,8 +105,8 @@ for (var i = 0; i < btns.length; i++) {
 <body style="background-color: #d8d8da;"></body>
 
 
-<table
-          style="width:92%;max-width:1000px;border:0px;border-spacing:30px;border-collapse:separate;margin-top:-30px;margin-right:auto;margin-left:auto;background-color: rgb(255, 255, 255);"><tbody>
+<table class="main_table"
+          style="width:92%;max-width:1000px;border:0px;border-spacing:30px;margin-right:auto;margin-left:auto;background-color: rgb(255, 255, 255);"><tbody>
 
             <tr style="padding:0px">
       <td style="padding:0px">
@@ -115,6 +115,7 @@ for (var i = 0; i < btns.length; i++) {
               </p>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-10px;max-width:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
+
 
 
             <td style="padding-top:20px;margin-bottom:-10px;" class="pic_region_top">
@@ -181,7 +182,7 @@ for (var i = 0; i < btns.length; i++) {
 
         <!--Research-->
 <!--        -->
-        <p id="Research"><br><br><br><br><br></p>
+        <p id="Research"><br><br><br><br><br><br></p>
 
         <table
                 style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-80px;margin-right:auto;margin-left:auto;"><tbody>
@@ -1112,7 +1113,7 @@ for (var i = 0; i < btns.length; i++) {
 <!--Engineering projects-->
 <!--        -->
 
-        <p id="Projects"><br><br></p>
+        <p id="Projects"><br><br><br></p>
         <table
                 style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-20px;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
