--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ for (var i = 0; i < btns.length; i++) {
                 <!-- <a href="data/Tajwar_Abrar_Aleef_CV.pdf" target="_blank">CV</a> &nbsp|&nbsp -->
                 <a href="https://scholar.google.com/citations?user=MhZ_pv8AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
                 &nbsp|&nbsp
-                <a href="https://github.com/tajwarabraraleef/" target="_blank">GitHub</a>                  <!-- <a href="https://www.researchgate.net/profile/Tajwar-Aleef" target="_blank">Research Gate</a> &nbsp|&nbsp -->
+                <a href="https://github.com/tajwarabraraleef/" target="_blank">GitHub</a>  &nbsp|&nbsp                <!-- <a href="https://www.researchgate.net/profile/Tajwar-Aleef" target="_blank">Research Gate</a> &nbsp|&nbsp -->
                 <a href="https://www.linkedin.com/in/tajwar-abrar-aleef/" target="_blank">LinkedIn</a> &nbsp|&nbsp
                 <!-- <a href="https://twitter.com/tajwaraleef" target="_blank">Twitter</a> &nbsp|&nbsp -->
                 <a href="https://www.youtube.com/user/rrobothead/videos" target="_blank">YouTube</a>
