--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@ window.onscroll = function() {scrollFunction()};
             <br>
             </div></p>
               <p style="text-align:center">
-                <a href="mailto:tajwaraleef@ece.ubc.ca"><i class="fa-regular fa-envelope fa-2xl" style="color: rgb(50, 50, 83);" alt="Email"></i></a> &nbsp&nbsp
-                <a href="https://scholar.google.com/citations?user=MhZ_pv8AAAAJ&hl=en&oi=ao" target="_blank"><i class="fa-brands fa-google-scholar fa-2xl" style="color: rgb(66, 133, 244);"></i></a>&nbsp&nbsp
-                <a href="https://github.com/tajwarabraraleef/" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: rgb(0, 0, 0);"></i></a> &nbsp&nbsp
-                <a href="https://www.linkedin.com/in/tajwar-abrar-aleef/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: rgb(10, 102, 194);"></i></a> &nbsp&nbsp
-                <a href="https://www.youtube.com/user/rrobothead/videos" target="_blank"><i class="fa-brands fa-youtube fa-2xl" style="color: red;"></i></a>
+                <a title="Email" href="mailto:tajwaraleef@ece.ubc.ca"><i class="fa-regular fa-envelope fa-2xl" style="color: rgb(50, 50, 83);" alt="Email"></i></a> &nbsp&nbsp
+                <a title="Google Scholar" href="https://scholar.google.com/citations?user=MhZ_pv8AAAAJ&hl=en&oi=ao" target="_blank"><i class="fa-brands fa-google-scholar fa-2xl" style="color: rgb(66, 133, 244);"></i></a>&nbsp&nbsp
+                <a title="GitHub" href="https://github.com/tajwarabraraleef/" target="_blank"><i class="fa-brands fa-github fa-2xl" style="color: rgb(0, 0, 0);"></i></a> &nbsp&nbsp
+                <a title="LinkedIn" href="https://www.linkedin.com/in/tajwar-abrar-aleef/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl" style="color: rgb(10, 102, 194);"></i></a> &nbsp&nbsp
+                <a title="YouTube" href="https://www.youtube.com/user/rrobothead/videos" target="_blank"><i class="fa-brands fa-youtube fa-2xl" style="color: red;"></i></a>
               </p>
 
             </td>
